--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.8",
+    "@nextui-org/system": "^2.2.6",
+    "@nextui-org/theme": "^2.2.11",
     "classnames": "^2.3.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "framer-motion": "^11.11.15",
+    "postcss": "^8.4.47",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
-    "@wixc3/react-board": "^2.1.3",
+    "@wixc3/react-board": "^4.3.3",
     "sass": "^1.57.1",
+    "tailwindcss": "^3.4.14",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
